package com.example.profisbackend.enums;

public enum AcademicLevel {
    NONE,
    BACHELOR_FH,
    BACHELOR_UNI,
    MASTER_FH,
    MASTER_UNI
    
}
