package com.example.profisbackend.enums;
public enum MarkType{
    SCIENTIFICWORK,
    COLLOQUIUM
}