package com.example.profisbackend.enums;

public enum SWS {
    ZERO_ONE,
    ZERO_TWO
    
}
