package com.example.profisbackend.model;
import com.example.profisbackend.enums.SWS;
import jakarta.persistence.Entity;
import jakarta.persistence.Id;
import lombok.Data;
@Data
@Entity
public class StudyProgram {
    @Id
    private Long id;
    private String title;
    private SWS rule;   
}
