@startuml
abstract class Person{
-id:Long
-firstName: String
-lastName: String
-address: String
-email: String
-phoneNumber: String
-level: AcademicLevel
-profilePicture: BufferedImage
}
abstract class  Evaluator 

class Referent
class Professor
class Student{
 -id: studentNumber
 -scientificWorks: List<ScientificWork>
}
enum AcademicLevel{
    NONE
    BACHELOR_UNI
    BACHELOR_FH
    MASTER_UNI
    MASTER_FH
}
Person<|-- Evaluator 
Evaluator<|-- Referent
Evaluator<|--Professor
Person <|-- Student

class Mark{
    -id: Long
    -type: MARK_TYPE
}
Mark "n"<--"1"Evaluator : gives

enum MARK_TYPE{
     COLLOQUIUM
     SCIENTIFICWORK
}
class ScientificWork{
    -id: Long
    -colloquium:LocalDateTime
    -title: String
    -startDate: LocalDate
    -endDate: LocalDate
}
ScientificWork "n"<--"1,2"Evaluator : monitor
ScientificWork "1"<--"2,4"Mark: has
ScientificWork "n"<--"1"Student: writes
ScientificWork "1"--"1"StudyProgram: is related



class StudyProgram{
    -id: Long
    -title: String
    -rule: SWS
}
enum SWS{
    ZERO_ONE
    ZERO_TWO

}



@enduml